Bug 394794 - New menu implementation pops up user menu partially out of view

--- a/bundles/org.eclipse.orion.client.core/web/css/theme.css
+++ b/bundles/org.eclipse.orion.client.core/web/css/theme.css
@@ -303,7 +303,7 @@ a.currentLocation:hover {
 .dropdownMenu {
 	color: #222;
 	background-color: #fbfbfb;
-	display: none;
+	visibility: hidden;
 	z-index: 150;
 	min-width: 120px;
 	position: absolute;
@@ -345,7 +345,7 @@ a.currentLocation:hover {
 }
 
 .dropdownMenuOpen {
-	display: block;
+	visibility: visible;
 }
 
 .dropdownSeparator {
